--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -61,7 +61,10 @@
 //  55. Top Bar
 //  56. Xy Grid
 
-@import './node_modules/foundation-sites/scss/util/util';
+@import '~foundation-sites/scss/util/util';
+
+// Set to 'true' when checking for Section 508 Compliance
+$contrast-warnings: false;
 
 // 1. Global
 // ---------
