--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@
 	
 	// ---- Generic components ----
 	@include foundation-button;
-	@include foundation-button-group;
+	// @include foundation-button-group;
 	@include foundation-close-button;
 	// @include foundation-label;
 	@include foundation-progress-bar;
@@ -33,7 +33,7 @@
 	@include foundation-callout;
 	// @include foundation-card;
 	@include foundation-dropdown;
-	@include foundation-pagination;
+	// @include foundation-pagination;
 	@include foundation-tooltip;
 
 	// ---- Containers ----
@@ -60,7 +60,7 @@
 
 	// ---- Helpers ----
 	@include foundation-float-classes;
-	// @include foundation-flex-classes;
+	@include foundation-flex-classes;
 	@include foundation-visibility-classes;
 	// @include foundation-prototype-classes;
 
